# remote-car-bluetooth-esp32

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  README.md  app.c  app.h  app_config.h  failsafe.c  main.c  main.h  util.c  util.h
main/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h  bluetooth_event.h
main/board/: CMakeLists.txt  board.c  board.h
main/common/: CMakeLists.txt  failsafe.c  failsafe.h  util.c  util.h
main/config/: CMakeLists.txt  config.c  config.h
main/drivers/: CMakeLists.txt  horn.c  horn.h  lights.c  lights.h  motors.c  motors.h  pwm.c  pwm.h
main/drivers/drive/: drive.c  drive.h  drive_ackermann.c  drive_differential.c
main/gamepad/: CMakeLists.txt  gamepad.c  gamepad.h  gamepad_button_state.c  gamepad_button_state.h  gamepad_logger.c  gamepad_logger.h  gamepad_mapper.c  gamepad_mapper.h
main/vehicle/: CMakeLists.txt  vehicle.c  vehicle.h  vehicle_command.c  vehicle_command.h
scripts/: setup_bluepad32.ps1
